fix: script integrity

--- a/public/test.html
+++ b/public/test.html
@@ -4,7 +4,8 @@
     <title>Widget Test</title>
     <script
       src="https://unpkg.com/ping-widget@latest/dist/ping-widget.js"
-      type="module"
+      integrity="sha384-yld/nxWavLwvLjWqy1FmtXT3IRltkx5jFOmmB18ZcEmzddc+lBsXlpt2KftmwqsX"
+      crossorigin="anonymous"
     ></script>
   </head>
   <body>
