refactor: delegration NaN

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="Ping Dashboard is a block explorer/web wallet for blockchains built on Cosmos SDK, Cosmoshub, Osmosis, Juno, Evmos, Injective, Canto and 70+ blockchains listed on ping.pub"
     />
     <script
+      type="module"
       src="https://unpkg.com/ping-widget@latest/dist/ping-widget.js"
       integrity="sha384-yld/nxWavLwvLjWqy1FmtXT3IRltkx5jFOmmB18ZcEmzddc+lBsXlpt2KftmwqsX"
       crossorigin="anonymous"
