--- a/public/test.html
+++ b/public/test.html
@@ -3,6 +3,7 @@
   <head>
     <title>Widget Test</title>
     <script
+      type="module"
       src="https://unpkg.com/ping-widget@latest/dist/ping-widget.js"
       integrity="sha384-yld/nxWavLwvLjWqy1FmtXT3IRltkx5jFOmmB18ZcEmzddc+lBsXlpt2KftmwqsX"
       crossorigin="anonymous"
