--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </div>
     <script type="module" src="/src/main.ts"></script>
     <!-- Google tag (gtag.js) -->
+    <!-- //NOSONAR -->
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-SSBKVF3GMX"
