ui: brand patch

--- a/public/widget-test.html
+++ b/public/widget-test.html
@@ -18,7 +18,7 @@
         />
       </div>
       <div>
-        <label for="PingTokenConvert" class="btn">Buy Kava</label>
+        <label for="PingTokenConvert" class="btn">Button for PingTokenConvert</label>
         <ping-token-convert
           chain-name="kava"
           endpoint="https://api.data.kava.io"
