--- a/index.html
+++ b/index.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nibiru Explorer</title>
+    <meta
+      name="description"
+      content="Nibiru Explorer is a block explorer/web wallet for blockchains built on Cosmos SDK, Cosmoshub, Osmosis, Juno, Evmos, Injective, Canto and 70+ blockchains listed on ping.pub"
+    />
+    <link rel="stylesheet" type="text/css" href="/loader.css" />
     <script
       async
       type="text/javascript"
-      src="https://www.googletagmanager.com/gtm.js?id=GTM-5Z96TB6L&l=dataLayer"
+      src="https://www.googletagmanager.com/gtm.js?id=	GTM-5Z96TB6L&l=dataLayer"
     ></script>
-
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nibiru Dashboard</title>
-    <meta
-      name="description"
-      content="Ping Dashboard is a block explorer/web wallet for blockchains built on Cosmos SDK, Cosmoshub, Osmosis, Juno, Evmos, Injective, Canto and 70+ blockchains listed on ping.pub"
-    />
-    <script
-      type="module"
-      src="https://unpkg.com/ping-widget@latest/dist/ping-widget.js"
-      integrity="sha384-yld/nxWavLwvLjWqy1FmtXT3IRltkx5jFOmmB18ZcEmzddc+lBsXlpt2KftmwqsX"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" type="text/css" href="/loader.css" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
@@ -35,12 +28,8 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-
     <div id="app">
       <div id="loading-bg">
-        <div class="loading-logo">
-          <img src="/logo.svg" alt="Logo" />
-        </div>
         <div class="pre-loading">
           <div class="effect-1 effects"></div>
           <div class="effect-2 effects"></div>
@@ -49,5 +38,9 @@
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/ping-widget@latest/dist/ping-widget.min.js"
+    ></script>
   </body>
 </html>
