--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
       type="text/javascript"
       src="https://www.googletagmanager.com/gtm.js?id=	GTM-5Z96TB6L&l=dataLayer"
     ></script>
+    <script
+      src="https://cdn.logr-ingest.com/LogRocket.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      if (
+        window.location.host.includes('explorer.nibiru.fi') &&
+        window.LogRocket
+      ) {
+        window.LogRocket.init('pypxrk/nibiru', {
+          rootHostname: window.location.host,
+        });
+      }
+    </script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
