--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ping Dashboard - Cosmos Blockchain Explorer And Web Wallet</title>
+    <title>Nibiru Explorer</title>
     <meta
       name="description"
-      content="Ping Dashboard is a block explorer/web wallet for blockchains built on Cosmos SDK, Cosmoshub, Osmosis, Juno, Evmos, Injective, Canto and 70+ blockchains listed on ping.pub"
+      content="Nibiru Explorer is a block explorer/web wallet for Nibiru Chain."
     />
     <link rel="stylesheet" type="text/css" href="/loader.css" />
   </head>
@@ -28,7 +28,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-SSBKVF3GMX"
+      src="https://www.googletagmanager.com/gtag/js?id=GTM-5Z96TB6L"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -44,7 +44,7 @@
         ad_personalization: 'denied',
         analytics_storage: 'denied',
       });
-      gtag('config', 'G-SSBKVF3GMX');
+      gtag('config', 'GTM-5Z96TB6L');
     </script>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ping-pub/widget@latest/dist/widget.min.js"></script>
   </body>
